[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/fps_player.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CapsuleShape" id=2]
radius = 1.05

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 0.317707, 1 )

[sub_resource type="BoxShape" id=4]

[node name="fps_player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="marker" type="CSGPolygon" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79816, 0 )
polygon = PoolVector2Array( 0.5, 0.5, 0, 0, 0, 1 )
mode = 1
spin_degrees = 360.0
spin_sides = 8

[node name="collision_body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="damage_area" type="Area" parent="."]

[node name="area_collision_body" type="CollisionShape" parent="damage_area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="collision_feet" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.07482, 0 )
shape = SubResource( 3 )

[node name="rotation_helper" type="Spatial" parent="."]

[node name="player_model" type="Spatial" parent="rotation_helper"]

[node name="player_camera" type="Camera" parent="rotation_helper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.890245, 0 )

[node name="gun_fire_points" type="Spatial" parent="rotation_helper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.89, -2 )

[node name="grab_objects" type="Spatial" parent="rotation_helper/gun_fire_points"]

[node name="Area" type="Area" parent="rotation_helper/gun_fire_points/grab_objects"]

[node name="CollisionShape" type="CollisionShape" parent="rotation_helper/gun_fire_points/grab_objects/Area"]
shape = SubResource( 4 )

[node name="gun_aim_points" type="Spatial" parent="rotation_helper"]

[node name="player_flashlight" type="SpotLight" parent="rotation_helper"]
shadow_enabled = true
spot_range = 11.5324
spot_angle = 49.6594

[node name="grenade_toss_position" type="Spatial" parent="rotation_helper"]

[node name="player_hud" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reticle" type="Control" parent="player_hud"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect2" type="ColorRect" parent="player_hud/Reticle"]
margin_left = -2.0
margin_top = -2.0
margin_right = 22.0
margin_bottom = 22.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="player_hud/Reticle"]
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="damage_area" to="." method="_on_damage_area_body_entered"]
[connection signal="body_entered" from="rotation_helper/gun_fire_points/grab_objects/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="rotation_helper/gun_fire_points/grab_objects/Area" to="." method="_on_Area_body_exited"]
